force-app/main/default/objects/Contact/fields/Number_of_Chickens__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Chickens__c</fullName>
    <inlineHelpText>Enter All them Chickens :</inlineHelpText>
    <label>Number of Chickens</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>