force-app/main/default/objects/Contact/fields/State_of_Chicken__c.field-meta.xml
<CustomField>
    <fullName>State_of_Chicken__c</fullName>
    <label>State of Chicken</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Types_of_Chickens__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooked</fullName>
            </value>
            <value>
                <fullName>Uncooked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>