force-app/main/default/objects/Contact/fields/Studentmaster__c.field-meta.xml
<CustomField>
    <fullName>Studentmaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Studentmaster</label>
    <referenceTo>Studentmaster__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>