force-app/main/default/objects/Contact/fields/Types_of_Chickens__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Chickens__c</fullName>
    <label>Chicken Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Golden</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>