force-app/main/default/objects/Contact/recordTypes/WestCoast.recordType-meta.xml
<RecordType>
    <fullName>WestCoast</fullName>
    <active>true</active>
    <label>WestCoast</label>
</RecordType>